replace initial notebook

--- a/classification_textxd.ipynb
+++ b/classification_textxd.ipynb
@@ -106,9 +106,7 @@
    },
    "outputs": [],
    "source": [
-    "DATA_DIR = 'data'\n",
-    "fname = os.path.join(DATA_DIR, 'tweets.csv')\n",
-    "df = pd.read_csv(fname)\n",
+    "df = pd.read_csv('tweets.csv')\n",
     "df"
    ]
   },
